feat: support batch delete current space upload history
1. Support batch delete current space upload history
2. Optimize the code

--- a/css/option.css
+++ b/css/option.css
@@ -22,6 +22,12 @@ body {
   border-radius: 5px;
 }
 
+.box .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .files {
   display: flex;
   align-items: center;
