--- a/css/common.css
+++ b/css/common.css
@@ -282,6 +282,12 @@ input:focus {
   font-weight: normal;
 }
 
+.btn-medium {
+  padding: 8px 12px;
+  font-size: 13px;
+  font-weight: normal;
+}
+
 .tag-info {
   background-color: #f4f4f5;
   border-color: #e9e9eb;
